一些错漏