@@ -19,7 +19,7 @@ public abstract class MixinBasicMachineRecipeManager {
     protected abstract void displayError(String msg);
 
     @Redirect(method = "addRecipe(Lic2/api/recipe/IRecipeInput;Ljava/util/Collection;Lnet/minecraft/nbt/NBTTagCompound;Z)Z", at = @At(value = "INVOKE", target = "Lic2/core/recipe/BasicMachineRecipeManager;displayError(Ljava/lang/String;)V"))
-    private void new$displayError(BasicMachineRecipeManager basicMachineRecipeManager, String string, @Local(name = "input") IRecipeInput input, @Local(name = "output") Collection<ItemStack> output) {
-        this.displayError("Input ItemStack " + input.getInputs().stream().map(ItemStack::getDisplayName).collect(Collectors.toList()) + " ,output ItemStack " + output.stream().map(ItemStack::getDisplayName).collect(Collectors.toList()) + " is invalid.");
+    private void new$displayError(BasicMachineRecipeManager basicMachineRecipeManager, String msg, @Local(name = "input") IRecipeInput input, @Local(name = "output") Collection<ItemStack> output) {
+        this.displayError("Input ItemStack " + input.getInputs().stream().map(ItemStack::getDisplayName).toList() + " ,output ItemStack " + output.stream().map(ItemStack::getDisplayName).toList() + " is invalid.");
     }
 }
